--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,11 @@
 name = "SistemasComplejos"
 authors = ["Daniel Luque", "Christian Muñoz"]
-[compat]
-julia = "1.8.5"
-DrWatson = "2.12.1"
+
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+SCUtils = "49baff95-e071-4f3e-92f1-47152cc99b7a"
+Vicsek = "e586df3f-75db-45ec-bd3b-e0485f1a1eb1"
+
+[compat]
+DrWatson = "2.12.1"
+julia = "1.8.5"
