--- a/src/SCUtils/Project.toml
+++ b/src/SCUtils/Project.toml
@@ -2,3 +2,7 @@ name = "SCUtils"
 uuid = "49baff95-e071-4f3e-92f1-47152cc99b7a"
 authors = ["Seth <53190848+Xx-Seth-xX@users.noreply.github.com>"]
 version = "0.1.0"
+
+[deps]
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
