--- a/src/SCUtils/Project.toml
+++ b/src/SCUtils/Project.toml
@@ -4,6 +4,7 @@ authors = ["Seth <53190848+Xx-Seth-xX@users.noreply.github.com>"]
 version = "0.1.0"
 
 [deps]
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
