--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,7 @@ authors = ["Daniel Luque", "Christian Muñoz"]
 
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
-PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SCUtils = "49baff95-e071-4f3e-92f1-47152cc99b7a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
