--- a/Project.toml
+++ b/Project.toml
@@ -2,11 +2,16 @@ name = "SistemasComplejos"
 authors = ["Daniel Luque", "Christian Muñoz"]
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CSVFiles = "5d742f6a-9f54-50ce-8119-2520741973ca"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 SCUtils = "49baff95-e071-4f3e-92f1-47152cc99b7a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Vicsek = "e586df3f-75db-45ec-bd3b-e0485f1a1eb1"
 
 [compat]
