--- a/src/Vicsek/Project.toml
+++ b/src/Vicsek/Project.toml
@@ -8,3 +8,4 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SCUtils = "49baff95-e071-4f3e-92f1-47152cc99b7a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
